<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMainActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/admin_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/Account"/>

            <EditText
                android:id="@+id/txtAdminUserName"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/Ten"
                android:editable="false"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="8">

        <Button
            android:id="@+id/btnOrderManagement"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/btnManagmentOder"
            android:layout_marginBottom="20dp"
            android:background="@drawable/admin_button"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnManagmentFood"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/btnManagmentFood"
            android:layout_marginBottom="20dp"
            android:background="@drawable/admin_button"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnManagmentEmployee"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/btnManagmentEmployee"
            android:layout_marginBottom="20dp"
            android:background="@drawable/admin_button"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnAccountEdit"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/account_info"
            android:layout_marginBottom="20dp"
            android:background="@drawable/admin_button"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnPasswordChange"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/user_password_change"
            android:layout_marginBottom="20dp"
            android:background="@drawable/admin_button"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/btnLogout"
            android:layout_marginBottom="20dp"
            android:background="@drawable/admin_button"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>