<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserMainActivity"
    android:id="@+id/drawerLayout"
    android:orientation="vertical"
    android:background="@mipmap/popeyes_chicken_sandwich">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:background="@drawable/admin_background"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome: "
                android:textColor="@color/white"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text=""
                android:textSize="30dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:gravity="center">
            <Button
                android:id="@+id/btnOrder"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/user_order"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginRight="20dp"
                android:background="@drawable/admin_button"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btnCart"
                android:layout_width="100dp"
                android:background="@drawable/admin_button"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/user_cart"
                android:textAllCaps="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btnAllFood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_food_all"
                android:textAllCaps="false"
                android:background="@android:color/holo_orange_dark"/>
            <Button
                android:id="@+id/btnFriedFood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_food_fried"
                android:textAllCaps="false"
                android:background="@android:color/holo_orange_dark"/>
            <Button
                android:id="@+id/btnFastFood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_fast_food"
                android:textAllCaps="false"
                android:background="@android:color/holo_orange_dark"/>
            <Button
                android:id="@+id/btnDrink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_drink"
                android:textAllCaps="false"
                android:background="@android:color/holo_orange_dark"/>
            <Button
                android:id="@+id/btnKhac"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_khac"
                android:textAllCaps="false"
                android:background="@android:color/holo_orange_dark"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center">

        <GridView
            android:horizontalSpacing="20dp"
            android:verticalSpacing="40dp"
            android:numColumns="2"
            android:id="@+id/foodGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"></GridView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="center">
        <Button
            android:id="@+id/btnAccountInfo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/account_info"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:background="@drawable/admin_button"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/btnPasswordChange"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/admin_button"
            android:text="@string/user_password_change"
            android:textAllCaps="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="center">
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/login_button"
            android:text="@string/btnLogout"
            android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>