<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity"
    android:orientation="vertical"
    android:background="@mipmap/western_food_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quan_li_don_hang"
            android:textColor="@android:color/white"
            android:textSize="40sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:padding="10dp">
        <GridView
            android:id="@+id/gridDonHang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:verticalSpacing="5dp"
            android:background="@android:color/white">

        </GridView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">
        <TextView
            android:id="@+id/txtDoanhThu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/doanh_thu"
            android:textColor="@android:color/white"
            android:textSize="25dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/btnConfirm"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/admin_don_hang_confirm"
            android:background="@drawable/login_button"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textAllCaps="false"
            android:text="@string/Back"
            android:background="@drawable/login_button"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:text="@string/admin_don_hang_cancel"
            android:background="@drawable/login_button"/>
    </LinearLayout>
</LinearLayout>