<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:background="@android:color/holo_orange_light"
    android:layout_margin="5dp">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/txtMaDonHang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/ma_don_hang"/>
    </LinearLayout>
    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/txtItemsQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/so_luong"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/txtTongTien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodPrice"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center">
        <TextView
            android:id="@+id/txtTinhTrang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tinh_trang"/>
    </LinearLayout>
</LinearLayout>