<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/western_food_background"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shipper"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="5dp"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/txtShipperUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_input_hint"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnAccountEdit"
                    android:textColor="@color/black"
                    android:background="@drawable/admin_button"
                    android:text="@string/account_info"
                    android:layout_marginRight="30dp"/>
                <Button
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@drawable/admin_button"
                    android:id="@+id/btnPasswordChange"
                    android:text="@string/user_password_change"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/danh_sach_don_hang"
                android:textColor="@android:color/white"
                android:textSize="25dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">
            <GridView
                android:id="@+id/donHangGridView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:verticalSpacing="5dp"
                android:horizontalSpacing="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btnDonHangGiao"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:layout_marginRight="10dp"
                android:text="@string/don_dang_giao"
                android:textSize="20dp"
                android:background="@drawable/login_button"/>
            <Button
                android:id="@+id/btnLogout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:text="@string/shipper_logout"
                android:textSize="20dp"
                android:background="@drawable/login_button"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>